--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ im.redis.ip = 192.168.80.112
 im.redis.channel=im-message
 im.jwt.secret = secret
 
-im.rabbitmq.ip=192.168.80.111
-im.rabbitmq.host=5672
-im.rabbitmq.queue=ha.hello
+spring.rabbitmq.host=192.168.80.112
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
